--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "Harry Dbrandy <dbrandydude@gmail.com> (http://github.com/dbrandydude)",
   "license": "ISC",
   "devDependencies": {
     "webpack": "^3.5.5"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
