--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "Harry Dbrandy <dbrandydude@gmail.com> (http://github.com/dbrandydude)",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.5",
+    "file-loader": "^0.11.2",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.5"
   },
   "dependencies": {
