--- a/package.json
+++ b/package.json
@@ -5,17 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
+    "server": "babel-node server.js"
   },
   "keywords": [],
   "author": "Harry Dbrandy <dbrandydude@gmail.com> (http://github.com/dbrandydude)",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "clean-webpack-plugin": "^0.1.16",
     "html-webpack-plugin": "^2.30.1",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "babel-preset-es2015": "^6.24.1",
+    "express": "^4.15.4",
+    "lodash": "^4.17.4",
+    "webpack-dev-middleware": "^1.12.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
