--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.5",
     "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
